funtional, need input validation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="styles.css" rel="stylesheet">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    
+    <h1>Built for developers</h1>
+
+    <!-- FORM: NEW ACCOUNT -->
+    <form class="" action="index.html" method="post">
+
+      <fieldset>
+
+        <!-- USERNAME -->
+        <label class=text-label for=username>Username</label>
+        <input class=text-input id=username type=text name=username placeholder="Pick a username" required>
+        <br>
+
+        <!-- EMAIL -->
+        <label class=text-label for=email>Email</label>
+        <input class=text-input id=email   type=email name=email placeholder="you@example.com" required>
+        <br>
+
+        <!-- PASSWORD -->
+        <label class=text-label for=password>Password</label>
+        <input class=text-input id=password type=password name=password placeholder="Create a password" required>
+        <br>
+
+        <!-- SERVICE -->
+        <div>
+          <span class=text-label>Service</span>
+          <input class=radio-chk-btn id=service-enterprise type=radio name=service required>
+          <label class=radio-chk-label for=service-enterprise>Enterprise</label>
+
+          <input class=radio-chk-btn id=service-pro type=radio name=service required>
+          <label class=radio-chk-label for=service-pro>Pro</label>
+
+          <input class=radio-chk-btn id=service-free type=radio name=service required>
+          <label class=radio-chk-label for=service-free>Free</label>
+        </div>
+
+        <!-- REMEMBER ME -->
+        <span class=text-label>Remember me</span>
+        <input class=radio-chk-btn id=remember-me type=checkbox name=remember-me>
+        <label class=radio-chk-label for="remember-me">I'm very needy!</label>
+
+        <!-- SUBMIT -->
+        <div class=submit-div>
+          <button type=submit>Sign up for Github</button>
+        </div>
+        <p>By clicking “Sign up for GitHub”, you agree to our <a href="#">terms of service</a> and <a href="#">privacy statement</a>. We’ll occasionally send you account related emails.</p>
+      </fieldset>
+    </form>
   </body>
+  <script src="main.js"></script>
 </html>
